# researcher_ai

./: deep_research_app.py  main.py  pyproject.toml  requirements.txt
deep_research_lib/: __init__.py  email_agent.py  planner_agent.py  research_manager.py  writer_agent.py
