[project]
name = "researcher-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.8.0",
    "openai>=2.24.0",
    "openai-agents>=0.10.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
]
